--- a/04_Analysis/01-Importing Datasets.ipynb
+++ b/04_Analysis/01-Importing Datasets.ipynb
@@ -1,16 +1,12 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center>\n",
-    "    <img src=\"https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/Logos/organization_logo/organization_logo.png\" width=\"300\" alt=\"cognitiveclass.ai logo\"  />\n",
-    "</center>\n",
     "\n",
-    "# Introduction  Notebook\n",
-    "\n",
-    "Estimated time needed: **10** minutes\n",
+    "# Introduction\n",
     "\n",
     "## Objectives\n",
     "\n",
@@ -55,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +300,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +644,7 @@
        "[10 rows x 26 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -702,29 +698,7 @@
       "headers\n",
       " ['symboling', 'normalized-losses', 'make', 'fuel-type', 'aspiration', 'num-of-doors', 'body-style', 'drive-wheels', 'engine-location', 'wheel-base', 'length', 'width', 'height', 'curb-weight', 'engine-type', 'num-of-cylinders', 'engine-size', 'fuel-system', 'bore', 'stroke', 'compression-ratio', 'horsepower', 'peak-rpm', 'city-mpg', 'highway-mpg', 'price']\n"
      ]
-    }
-   ],
-   "source": [
-    "# create headers list\n",
-    "headers = [\"symboling\",\"normalized-losses\",\"make\",\"fuel-type\",\"aspiration\", \"num-of-doors\",\"body-style\",\n",
-    "         \"drive-wheels\",\"engine-location\",\"wheel-base\", \"length\",\"width\",\"height\",\"curb-weight\",\"engine-type\",\n",
-    "         \"num-of-cylinders\", \"engine-size\",\"fuel-system\",\"bore\",\"stroke\",\"compression-ratio\",\"horsepower\",\n",
-    "         \"peak-rpm\",\"city-mpg\",\"highway-mpg\",\"price\"]\n",
-    "print(\"headers\\n\", headers)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " We replace headers and recheck our data frame\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -1067,12 +1041,20 @@
        "[10 rows x 26 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# create headers list\n",
+    "headers = [\"symboling\",\"normalized-losses\",\"make\",\"fuel-type\",\"aspiration\", \"num-of-doors\",\"body-style\",\n",
+    "         \"drive-wheels\",\"engine-location\",\"wheel-base\", \"length\",\"width\",\"height\",\"curb-weight\",\"engine-type\",\n",
+    "         \"num-of-cylinders\", \"engine-size\",\"fuel-system\",\"bore\",\"stroke\",\"compression-ratio\",\"horsepower\",\n",
+    "         \"peak-rpm\",\"city-mpg\",\"highway-mpg\",\"price\"]\n",
+    "print(\"headers\\n\", headers)\n",
+    "\n",
+    "##  We replace headers and recheck our data frame\n",
     "df.columns = headers\n",
     "df.head(10)"
    ]
@@ -1086,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1102,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1727,7 +1709,7 @@
        "[20 rows x 26 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1756,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1771,7 +1753,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1861,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1896,7 +1878,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1914,7 +1896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1992,7 +1974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2159,7 +2141,7 @@
        "max    4066.000000   326.000000          23.000000   49.000000    54.000000  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2186,7 +2168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2304,7 +2286,7 @@
        "      <td>5500</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>16500</td>\n",
+       "      <td>8921</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>freq</th>\n",
@@ -2543,23 +2525,23 @@
        "75%      141.000000          NaN   NaN     NaN          9.400000        NaN   \n",
        "max      326.000000          NaN   NaN     NaN         23.000000        NaN   \n",
        "\n",
-       "        peak-rpm    city-mpg highway-mpg  price  \n",
-       "count        199  201.000000  201.000000    201  \n",
-       "unique        22         NaN         NaN    186  \n",
-       "top         5500         NaN         NaN  16500  \n",
-       "freq          36         NaN         NaN      2  \n",
-       "mean         NaN   25.179104   30.686567    NaN  \n",
-       "std          NaN    6.423220    6.815150    NaN  \n",
-       "min          NaN   13.000000   16.000000    NaN  \n",
-       "25%          NaN   19.000000   25.000000    NaN  \n",
-       "50%          NaN   24.000000   30.000000    NaN  \n",
-       "75%          NaN   30.000000   34.000000    NaN  \n",
-       "max          NaN   49.000000   54.000000    NaN  \n",
+       "        peak-rpm    city-mpg highway-mpg price  \n",
+       "count        199  201.000000  201.000000   201  \n",
+       "unique        22         NaN         NaN   186  \n",
+       "top         5500         NaN         NaN  8921  \n",
+       "freq          36         NaN         NaN     2  \n",
+       "mean         NaN   25.179104   30.686567   NaN  \n",
+       "std          NaN    6.423220    6.815150   NaN  \n",
+       "min          NaN   13.000000   16.000000   NaN  \n",
+       "25%          NaN   19.000000   25.000000   NaN  \n",
+       "50%          NaN   24.000000   30.000000   NaN  \n",
+       "75%          NaN   30.000000   34.000000   NaN  \n",
+       "max          NaN   49.000000   54.000000   NaN  \n",
        "\n",
        "[11 rows x 26 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2607,7 +2589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2692,7 +2674,7 @@
        "max    208.100000          23.000000"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2741,7 +2723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2790,61 +2772,33 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>Excellent! You have just completed the  Introduction  Notebook!</h1>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Thank you for completing this lab!\n",
     "\n",
     "## Author\n",
     "\n",
-    "<a href=\"https://www.linkedin.com/in/joseph-s-50398b136/\" target=\"_blank\">Joseph Santarcangelo</a>\n",
-    "\n",
-    "### Other Contributors\n",
-    "\n",
-    "<a href=\"https://www.linkedin.com/in/mahdi-noorian-58219234/\" target=\"_blank\">Mahdi Noorian PhD</a>\n",
-    "\n",
-    "Bahare Talayian\n",
-    "\n",
-    "Eric Xiao\n",
-    "\n",
-    "Steven Dong\n",
-    "\n",
-    "Parizad\n",
-    "\n",
-    "Hima Vasudevan\n",
-    "\n",
-    "<a href=\"https://www.linkedin.com/in/fiorellawever/\" target=\"_blank\">Fiorella Wenver</a>\n",
-    "\n",
-    "<a href=\" https://www.linkedin.com/in/yi-leng-yao-84451275/ \" target=\"_blank\" >Yi Yao</a>.\n",
+    "<a href=\"https://www.linkedin.com/in/zehui-bai-169b131b1/\" target=\"_blank\">Zehui Bai</a>\n",
     "\n",
     "## Change Log\n",
     "\n",
     "| Date (YYYY-MM-DD) | Version | Changed By | Change Description                       |\n",
     "| ----------------- | ------- | ---------- | ---------------------------------------- |\n",
-    "| 2020-10-30        | 2.3     | Lakshmi    | Changed URL of the csv                   |\n",
-    "| 2020-09-22        | 2.2     | Nayef      | Added replace() method to remove '?'     |\n",
-    "| 2020-09-09        | 2.1     | Lakshmi    | Made changes in info method of dataframe |\n",
-    "| 2020-08-27        | 2.0     | Lavanya    | Moved lab to course repo in GitLab       |\n",
+    "| 2022-12-16        | 1.0     | ZBA        | Initialization                           | \n",
     "\n",
     "<hr>\n",
     "\n",
-    "## <h3 align=\"center\"> © IBM Corporation 2020. All rights reserved. <h3/>\n"
+    "## <h3 align=\"center\"> © Zehui Bai & IBM Data Analysis with Python.<h3/>\n"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "DS",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ds"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2856,7 +2810,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.0 (main, Oct 24 2022, 18:26:48) [MSC v.1933 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "00f20b9d7b63398856e9b60485d6184f740ae9772086e0a2d85bb594c86d11a6"
+   }
   }
  },
  "nbformat": 4,
